@@ -1,3 +1,8 @@
+iRedMail-0.9.6:
+    * Fixed issues:
+        - Postfix:
+            - Cannot deliver email to system account.
+
 iRedMail-0.9.5:
     * Supports new distribution release:
         + Ubuntu 16.04 LTS (code name: xenial).
